# DevDrive

./: .gitignore  clean-and-zip.ps1  package-lock.json  package.json  tsconfig.json  vercel.json
mdrive-api/: .env.example  package-lock.json  package.json  test-config.ts  tsconfig.json
mdrive-api/.next/: trace
mdrive-api/api/: index.ts
mdrive-api/src/: app.ts  b2.ts  config.ts  db.ts  index.ts  shared.ts
mdrive-api/src/models/: activity.ts  file-meta.ts  folder.ts  message.ts  note.ts  settings.ts  user.ts
mdrive-api/src/plugins/: auth.ts  rbac.ts
mdrive-api/src/routes/: activity.ts  auth.ts  chat.ts  files.ts  folders.ts  notes.ts  settings.ts
mdrive-api/src/shared/: types.ts
mdrive-client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mdrive-client/src/: App.tsx  index.css  main.tsx
mdrive-client/src-tauri/: Cargo.toml  errors.txt  tauri.conf.json
mdrive-client/src-tauri/capabilities/: default.json
mdrive-client/src-tauri/icons/: icon.icns
mdrive-client/src-tauri/src/: config.rs  lib.rs  main.rs
mdrive-client/src-tauri/src/commands/: auth.rs  files.rs  mod.rs
mdrive-client/src/components/: ChangePasswordModal.tsx  CodeEditor.tsx  CommunitySidebar.tsx  DeleteConfirmationModal.tsx  FileIcon.tsx  FilePreviewModal.tsx  HistorySidebar.tsx  Layout.tsx  ManageAccessModal.tsx  NotesSidebar.tsx  ProtectedRoute.tsx  Titlebar.tsx
mdrive-client/src/contexts/: ThemeContext.tsx
mdrive-client/src/hooks/: useAuth.tsx  useNotifications.ts
mdrive-client/src/lib/: api.ts  tauri.ts
mdrive-client/src/pages/: AdminSettings.tsx  AdminUsers.tsx  Dashboard.tsx  Login.tsx  Settings.tsx  (+1 more)
(+5 files in other folders)
