[package]
name = "devdrive"
version = "0.1.0"
description = "DevDrive — Cloud file sync desktop client"
authors = ["you"]
edition = "2021"

[lib]
name = "mdrive_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
sha2 = "0.10"
dirs = "6"
futures-util = "0.3.32"
async-stream = "0.3.6"
bytes = "1.11.1"
